Added some more tags

--- a/tags.yml
+++ b/tags.yml
@@ -81,3 +81,21 @@ minicooper:
  - miniclassicgarage
  - antidotetomeanness
  - minicooperadventures
+ - healthcare
+ - obamacare
+ - trumpcare
+ - ACA
+ - AHCA
+ - deathpanels
+ - healthinsurance
+ - singlepayer
+ - pharma
+ - bigpharma
+ - drugprices
+ - publicoption
+ - clinton
+ - sanders
+ - hillaryclinton
+ - billclinton
+ - donaldtrump
+ - teaparty
