Add some more fashion tags

--- a/tags.yml
+++ b/tags.yml
@@ -335,6 +335,7 @@ fashion:
  - bangle
  - purse
  - catwalk
+ - fashionshow
  - fashiontrends
  - fashion
  - jcrew
@@ -408,7 +409,10 @@ fashion:
  - diva
  - fragrance
  - cosme
+ - fashionmodel
  - model
+ - fashionmodels
+ - models
  - heels
  - silk
  - fashionbloggers
@@ -440,3 +444,23 @@ fashion:
  - ties
  - tie
  - handkerchief
+ - versace
+ - hugoboss
+ - brooksbrothers
+ - calvinklein
+ - levis
+ - jeans
+ - gowns
+ - gown
+ - coachella
+ - streetfashion
+ - fashionoutlet
+ - fashionoutlets
+ - fashiondiva
+ - ladiesfashion
+ - womensfashion
+ - mensfashion
+ - hipster
+ - retro
+ - retrofashion
+ - retrostyle
