Add ASICs related tags

--- a/tags.yml
+++ b/tags.yml
@@ -464,3 +464,40 @@ fashion:
  - retro
  - retrofashion
  - retrostyle
+ - sneaker
+ - sneakers
+ - asics
+ - crepes
+ - beaters
+ - cokewhites
+ - alphet
+ - acg
+ - garms
+ - grails
+ - highs
+ - icysole
+ - instacop
+ - hypebeast
+ - kicks
+ - lows
+ - mids
+ - nib
+ - nibs
+ - ogs
+ - steez
+ - steezy
+ - tinker
+ - hatfield
+ - upper
+ - vnds
+ - yeezy
+ - zories
+ - limou
+ - limous
+ - mandal
+ - mandals
+ - shitkicker
+ - shitkickers
+ - trainers
+ - jesusboots
+
