Added wants/needs words to automotive search

--- a/tags.yml
+++ b/tags.yml
@@ -83,6 +83,12 @@ automotive:
  - miniclassicgarage
  - antidotetomeanness
  - minicooperadventures
+ - want
+ - wants
+ - wanted
+ - need
+ - needs
+ - needed
 politics:
  - healthcare
  - obamacare
