--- a/fathom_automotive.service
+++ b/fathom_automotive.service
@@ -8,6 +8,7 @@ User=fathom
 Group=fathom
 WorkingDirectory=/app/grabtweet
 ExecStart=/app/grabtweet/grab.py automotive
+Restart=always
 StandardOutput=null
 StandardError=syslog
 
