--- a/fathom_politics.service
+++ b/fathom_politics.service
@@ -8,6 +8,7 @@ User=fathom
 Group=fathom
 WorkingDirectory=/app/grabtweet
 ExecStart=/app/grabtweet/grab.py politics
+Restart=always
 StandardOutput=null
 StandardError=syslog
 
