Fix bugs with systemd units

--- a/fathom_automotive.service
+++ b/fathom_automotive.service
@@ -7,7 +7,7 @@ Type=simple
 User=fathom
 Group=fathom
 WorkingDirectory=/app/grabtweet
-ExecStart=/app/grabtweet/grab.py automotive
+ExecStart=/usr/bin/python3 /app/grabtweet/grab.py automotive
 Restart=always
 StandardOutput=null
 StandardError=syslog
