--- a/fathom_fashion.service
+++ b/fathom_fashion.service
@@ -7,7 +7,7 @@ Type=simple
 User=fathom
 Group=fathom
 WorkingDirectory=/app/grabtweet
-ExecStart=/app/grabtweet/grab.py fashion
+ExecStart=/usr/bin/python3 /app/grabtweet/grab.py fashion
 Restart=always
 StandardOutput=null
 StandardError=syslog
