--- a/tags.yml
+++ b/tags.yml
@@ -506,4 +506,32 @@ fashion:
  - shitkickers
  - trainers
  - jesusboots
-
+banking:
+ - banks
+ - banking
+ - bank
+ - bankofamerica
+ - BOA
+ - wellsfargo
+ - capitalone
+ - capital1
+ - fidelity
+ - fidelityinvestments
+ - interestrates
+ - money
+ - checking
+ - savings
+ - ATM
+ - bankfees
+ - americanexpress
+ - financecharges
+ - loans
+ - autoloans
+ - homeloans
+ - FDIC
+ - credit
+ - creditcard
+ - debitcard
+ - teller
+ - bankteller
+ - checks
